# Doc-Search-with-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  ui.py
data/text_files/: machine_learning.txt  python_intro.txt
faiss_store/: faiss.index  metadata.pkl
src/: config.py  search.py  vectorstore.py
